update 2nd, added test-v1 and test-v2 nix files

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -1,31 +1,108 @@
-Question: I know about overriding and overlays and it's useful but, and so for example what you can do
-is you have a packages as nix packages and if you want to change the input you can use that to change
-the input and thats nice, but what am I supposed to do when you want to change something that is not in
-the arguments of the function that defines the package, for example if you want to change the source, 
-I just want to go to different commits of the package, but I want to reuse the build file that is in 
-nix package, how do I do that?
+Silvan: All right so yeah, just to re-iterate we have some people from outside of tweag joining now,
+open to the public now, we're like half tweagers, half from outside, so that's awesome, so yeah, open
+to anyone, any questions, things they want to have taken a look at, issues, PR's, anything nix really.
 
-A: Yeah, good question.
+Quentin Aristote: I do have a question. I know about overriding and overlays and it's useful but, and so for 
+example what you can do is you have a packages as nix packages and if you want to change the input you 
+can use that to change the input and thats nice, but what am I supposed to do when you want to change 
+something that is not in the arguments of the function that defines the package, for example if you 
+want to change the source, I just want to go to different commits of the package I want to build, 
+but I want to reuse the build file that is in nix package, how do I do that?
+
+Silvan: Yeah, good question. I'm gonna share the screen here, we open like a `test.nix` file. 
+
+```
+vim test.nix  
+```
+
+So I guess you're asking so if you have like nixpkgs here:
 
 ```nix
-let 
+let
+  pkgs = import <nixpkgs> {};
+```
+
+And I guess let's add an overlay in here:
+
+```nix
+let
+  pkgs = import <nixpkgs> {};
+in pkgs.hello
+```
+
+And you have some overlays:
+
+```nix
+let
+  pkgs = import <nixpkgs> {
+    overlays = [
+      ()
+    ]
+  };
+in pkgs.hello
+```
+
+Like this, `self`, `super`, let's use `final` and `prev`, a bit more intuitive, all right:
+
+```nix
+let
   pkgs = import <nixpkgs> {
     overlays = [
       (final: prev: {
-        hello = 
+        hello =
       })
     ];
   };
 in pkgs.hello
 ```
-And now generally you'd do, so you are asking about, we have like `hello = prev.hello.override`,
-Let's look at the `hello` derivation. Note: he checks the arguments within the nixpkgs repo 
-searching for `hello/default.nix`. 
 
-So these are the arguments that `.override` overrides but I guess you want to override the source here
-(`src = fetchurl..`) and so this would be `.overrideAttrs`. The naming is a bit weird so if you go here.
+So now, generally you'd do, so you are asking about, we have like `hello = prev.hello.override`,
+to do like, let's look at the `hello` derivation what that has:
 
-Let's make `fetchurl` throw an error:
+```
+> 'hello/default.nix' 
+```
+> Note: Currently, it's found under `hello/package.nix`
+
+Here, so these are the arguments:
+
+```nix
+{
+  callPackage,
+  lib,
+  stdenv,
+  fetchurl,
+  nixos,
+  testers,
+  versionCheckHook,
+  hello,
+}:
+```
+
+So these are the arguments that `.override` overrides but I guess you want to override the source here:
+
+```nix
+  src = fetchurl {
+    url = "mirror://gnu/hello/hello-${finalAttrs.version}.tar.gz";
+    hash = "sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=";
+  };
+```
+
+and so this would be `.overrideAttrs`. The naming is a bit weird and the functions don't work exactly
+the same way but this is the general kind of mapping, so all the attributes are `.overrideAttrs`,
+so if you go in here:
+
+```
+vim test.nix
+```
+
+Let's do like an override first, to do like, oh I forget what the arguments were:
+
+```
+vim pkgs/by-name/he/hello/package.nix
+```
+
+We have like, `fetchurl`, let's make `fetchurl` throw an error:
 
 ```nix
 let 
@@ -40,7 +117,14 @@ let
   };
 in pkgs.hello
 ```
-Let's make sure we can evaluate this, I'm gonna run I guess `:!nix-build test.nix`. OK, that works.
+
+So that works, let's make sure we can evaluate this, I'm gonna run a, I guess `:!nix-build test.nix`:
+
+```nix
+nix-build test.nix
+```
+
+OK, that works.
 Oh, but now I guess we could try this, we could add the override attrs and we are gonna override the 
 source to not use fetchurl so we get a working something like, we can do this with `overrideAttrs`, one
 notable difference, which I think it's still the case is that `overrideAttrs` takes a function, it 
