2nd, updating derivation attributes

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -122,27 +122,115 @@ So that works, let's make sure we can evaluate this, I'm gonna run a, I guess `:
 
 ```nix
 nix-build test.nix
+error: not fetchurl
+(use '--show-trace' to show detailed location information)
+
+shell returned 1
 ```
 
-OK, that works.
-Oh, but now I guess we could try this, we could add the override attrs and we are gonna override the 
-source to not use fetchurl so we get a working something like, we can do this with `overrideAttrs`, one
-notable difference, which I think it's still the case is that `overrideAttrs` takes a function, it 
-always takes a function, `override` can take an attribute set directly here: `{fetchurl = throw 
-"not fetchurl";}` or it can take a function that return an attribute set, `overrideAttrs` is a bit 
-different than that in that it always needs a function. So here `.overrideAttrs ()`, the argument 
-what people generally call that I think it's `drv:` or `oldAttrs: {}`, something like that. The argument
-here represents the old attributes that were passed to the derivation, and so here we also have access to
-source, we can say `.overriddeAttrs (oldAttrs: { src = oldAttrs.src; });`
+> Note: currently the error has more output:
 
 ```nix
-.overrideAttrs (oldAttrs: {
-  src = oldAttrs.src;
+nix-build test-v1-fetchurl-error.nix
+error:
+       … while calling the 'derivationStrict' builtin
+         at <nix/derivation-internal.nix>:34:12:
+           33|
+           34|   strict = derivationStrict drvAttrs;
+             |            ^
+           35|
 
-  nativeBuildInputs = oldAttrs.nativeBuildInputs or [] ++ [
-    final.jq
-  ];
-});
+       … while evaluating derivation 'hello-2.12.1'
+         whose name attribute is located at /nix/store/lifi3q1an6mgsksd52hizhhjfj1yf6sg-nixos/nixos/pkgs/stdenv/generic/make-derivation.nix:375:7
+
+       … while evaluating attribute 'src' of derivation 'hello-2.12.1'
+         at /nix/store/lifi3q1an6mgsksd52hizhhjfj1yf6sg-nixos/nixos/pkgs/by-name/he/hello/package.nix:16:3:
+           15|
+           16|   src = fetchurl {
+             |   ^
+           17|     url = "mirror://gnu/hello/hello-${finalAttrs.version}.tar.gz";
+
+       (stack trace truncated; use '--show-trace' to show the full, detailed trace)
+
+       error: not fetchurl
+```
+
+OK, that works. It's not fetchurl. Oh, but now I guess we could try this, we could add the overrideAttrs:
+
+```nix
+hello = (prev.hello.override {
+  fetchurl = throw "not fetchurl";
+}).
+```
+
+and we are gonna override the source to not use fetchurl so we get a working something like, 
+we can do this with `overrideAttrs`:
+
+```nix
+hello = (prev.hello.override {
+  fetchurl = throw "not fetchurl";
+}).overrideAttrs
+```
+
+One notable difference, which I think it's still the case is that `overrideAttrs` takes a function,
+(`overrideAttrs (`), not.. it always takes a function, `override` can take an attribute set directly 
+here: (`{fetchurl = throw "not fetchurl";}`) or it can take a function that return an attribute set, 
+`overrideAttrs` is a bit different in that it always needs a function. So here `.overrideAttrs (`, 
+the argument what people generally call that I think it's `drv:` or `oldAttrs: {}`, something like that. 
+The argument here (`oldAttrs: `) represents the old attributes that were passed to the derivation, 
+and so here we also have access to like the source, we can say `src = oldAttrs.src;`. Doesn't change
+anything but we have access to that. Sometimes it's useful when you want to do like `nativeBuildInputs`
+so you want to add some build tooling, some tooling onto your (used? 4.39) build time, if you just
+do something like this:
+
+```nix
+nativeBuildInputs = [ ];
+```
+
+Let's do `final.` let's say `jq`:
+
+```nix
+nativeBuildInputs = [
+  final.jq
+];
+```
+
+Anything really. So this would clear `nativeBuildInputs`, it would remove all the  old entries,
+so to get around this you generally do `oldAttrs.nativeBuildInputs` plus (`++`), list append
+all the old entries and the new one, though sometimes I think that can happen,
+`nativeBuildInputs`doesn't exist as an attribute so it wasn't even defined so then you need
+a an additional `or` here:
+
+```nix
+nativeBuildInputs = oldAttrs.nativeBuildInputs or [] ++ [
+  final.jq
+];
+```
+
+Because to, just to have a default in case it doesn't exist, that is sometimes a bit..
+
+Yuriy Taraday: Isn't it defined by the derivation?
+
+Silvan: It might be, I'm not entirely sure, I guess let's actually test this, it might
+be good thing here, let's test it just like that:
+
+```nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          fetchurl = throw "not fetchurl";
+        }).overrideAttrs. (oldAttrs: {
+          src = oldAttrs.src;
+          
+          nativeBuildInputs = oldAttrs.nativeBuildInputs ++ [
+            final.jq
+          ];
+        });
+      ];
+    };
+in pkgs.hello
 ```
 
 There is a discussion on how `or` has higher precedence.
