--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -221,21 +221,126 @@ let
       (final: prev: {
         hello = (prev.hello.override {
           fetchurl = throw "not fetchurl";
-        }).overrideAttrs. (oldAttrs: {
+        }).overrideAttrs (oldAttrs: {
           src = oldAttrs.src;
           
           nativeBuildInputs = oldAttrs.nativeBuildInputs ++ [
             final.jq
           ];
         });
-      ];
-    };
+      })
+    ];
+  };
 in pkgs.hello
 ```
 
-There is a discussion on how `or` has higher precedence.
+```nix
+nix-build test.nix
+error: attribute 'nativeBuildInputs' missing
+# ...
+```
+Ah yes, it's, `nativeBuildInputs` is missing.
 
-Now he comments on a new style in writing:
+Yuriy: Okay
+
+Silvan: Now if we add this, (`or []`) it should work:
+
+```nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          fetchurl = throw "not fetchurl";
+        }).overrideAttrs (oldAttrs: {
+          src = oldAttrs.src;
+          
+          nativeBuildInputs = oldAttrs.nativeBuildInputs ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+We still get the not fetchurl error. This is sometimes a bit confusing here though
+because `or` does have a higher precedence than kind of this kind of thing:
+(`[] ++ [ final.jq ];`), so this does this:
+
+> Note: Adds parenthesis around `oldAttrs...[]`
+
+```nix
+nativeBuildInputs = (oldAttrs.nativeBuildInputs or []) ++ [
+  final.jq
+];
+```
+
+But it might also look that it could do this:
+
+> Note: Adds parenthesis around `([] ++ [ final.jq ]);`
+
+```nix
+nativeBuildInputs = oldAttrs.nativeBuildInputs or ([] ++ [
+  final.jq
+]);
+```
+
+But yeah, this is what happens underneath and so if you want you could add these parenthesis
+on your own just to make it clear what the order of operations is here:
+
+```nix
+nativeBuildInputs = (oldAttrs.nativeBuildInputs or []) ++ [
+  final.jq
+];
+```
+
+So overriding source here, (`src`), so here we do need to override the entire source
+attribute, let's look at the hello derivation again to see what the source there was:
+
+```
+nvim pkgs/by-name/he/hello/package.nix
+```
+
+So it was fetched from this kind of thing:
+
+```nix
+  src = fetchurl {
+    url = "mirror://gnu/hello/hello-${finalAttrs.version}.tar.gz";
+    hash = "sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=";
+  };
+```
+
+All right, let's go `test.nix` and pop in that, put it in here, we need to update the
+references here, and say `final.fetchurl`:
+
+```nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          fetchurl = throw "not fetchurl";
+        }).overrideAttrs (oldAttrs: {
+          
+          src = final.fetchurl {
+            url = "mirror://gnu/hello/hello-${finalattrs.version}.tar.gz";
+            hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+          };
+
+          nativebuildinputs = oldattrs.nativebuildinputs or [] ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+Here we also have something kind of new in nixpkgs (`finalAttrs.version`), where, well
+let's go back to the hello example here:
 
 ```nix
 stdenv.mkDerivation (finalAttrs: {
@@ -245,15 +350,134 @@ stdenv.mkDerivation (finalAttrs: {
 ```
 
 This is kind of written in a new style here where make derivation takes a function returning
-an attribute. Generally it was always like this (without) but this then pushed people to using
-the `rec` here because in this case you want to use the version and how do you not duplicate the
-version, you do that by, you could do that with a `rec`, this makes it a recursive attribute set,
-where all the values are brought into scope, but this is a very local thing, like just local
-through this definition and it's not propagated outside of that so in the end the values are
-still kind of duplicated at the nix structure where this string doesn't know `url = ...{version}..`,
-if you change the version it's gonna keep the old verison here. Recently it was added that you
-can use a function here and then the function argument here then refers to the actual final
-attributes even if they have been changed by overrides and such. 
+an attribute. Generally it was always like this:
+
+```nix
+stdenv.mkDerivation {
+  pname = ...
+# ...
+```
+
+but this then pushed people to using the `rec` here:
+
+```nix
+stdenv.mkDerivation rec {
+```
+
+because in this case you want to use the version and how do you not duplicate the
+version thing here (`{version}`), you do that by, you could do that with a `rec` here, 
+this makes it a recursive attribute set, where all the values are kind of brought into 
+scope, but this is a very local thing, like just local to this definition and it's not 
+propagated outside of that so in the end the values are still kind of duplicated at the 
+nix structure where this string doesn't know `url = ...{version}..`, if you change the 
+version here (`version = "2.12.1";`), it's gonna keep the old version here,
+(`url = "mirror://gnu/hello..{version}.tar.gz";`) so that was kind of a complaint with
+`mkDerivation` so recently it was added that you can use a function here:
+
+```nix
+stdenv.mkDerivation (finalAttrs: {
+```
+
+and then the function argument here (`finalAttrs`) refers to the actual final attributes,
+even if they have been changed by overrides and such, and so here, this is why you can
+refer to `{finalAttrs.version}` here. It is a very new thing here, I don't think a lot
+convention has been established around whether they should be used for all derivations
+but if you want to you can use that.
+
+Soham Chowdhury: What is the advantage of this over the `rec`, isn't it equivalent in
+the end?
+
+Silvan: It looks like if you just have a derivation like this it does make a difference
+if you have a `.overrideAttrs` because, we can test this out here:
+
+```
+nvim pkgs/by-name/he/hello/package.nix
+```
+
+So the hello derivation currently uses the function, so if we do:
+
+```
+vim test.nix
+```
+
+Let's say we override..
+
+Yuriy Taraday: Set version to two twelve
+
+Silvan: Yeah, we could do this here, (`version = "2.12";`), well in this case let
+me undo this and let me undo this as well:
+
+```nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          #fetchurl = throw "not fetchurl";
+        }).overrideAttrs (oldAttrs: {
+          version = "2.12";
+          # src = fetchurl {
+          #url = "mirror://gnu/hello/hello-${finalattrs.version}.tar.gz";
+          #hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+          #};
+
+          nativebuildinputs = oldattrs.nativebuildinputs or [] ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+So we only override the version here, actually I don't think this does anything in
+this case because the source has a fixed output hash so it doesn't really do much
+I think, we could try:
+
+```nix
+nix-build test-v4-override.nix
+these 2 derivations will be built:
+  /nix/store/sihfj1b79w2xazpa826vqqwcdgbrkg1p-hello-2.12.tar.gz.drv
+  /nix/store/3m8s848r1wj6d2fq7if2ciwfd6jprfdn-hello-2.12.drv
+this path will be fetched (0.00 MiB download, 0.00 MiB unpacked):
+  /nix/store/096i6ysqh596z1srsh758z3swz00kmlr-version-check-hook
+copying path '/nix/store/096i6ysqh596z1srsh758z3swz00kmlr-version-check-hook' from 'https://cache.nixos.org'...
+building '/nix/store/sihfj1b79w2xazpa826vqqwcdgbrkg1p-hello-2.12.tar.gz.drv'...
+
+trying https://ftpmirror.gnu.org/hello/hello-2.12.tar.gz
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0
+100  993k  100  993k    0     0   147k      0  0:00:06  0:00:06 --:--:--  209k
+error: hash mismatch in fixed-output derivation '/nix/store/sihfj1b79w2xazpa826vqqwcdgbrkg1p-hello-2.12.tar.gz.drv':
+         specified: sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=
+            got:    sha256-zwSvhtwIUmjF9EcPuuSbGK+8Iht4CWqrhC2TSna60Ks=
+error: 1 dependencies of derivation '/nix/store/3m8s848r1wj6d2fq7if2ciwfd6jprfdn-hello-2.12.drv' failed to build
+```
+
+Yuriy Taraday: .. I know that src dot sha256 will not work but do you think there is some way to
+overwrite src here, just the hash here?
+
+Silvan: I.. I think we can do that actually with `url = oldAttrs`, and maybe we should call this
+`finalAttrs` because that's also what the hello derivation calls it, `url = finalAttrs.src.url;`
+I do believe the fetchurl function exports the url as like an attribute
+
+Yuriy Taraday: Yeah
+
+Silvan: It might also be `urls`, let's see whether this works:
+
+```nix
+# ...
+ .overrideAttrs (finalAttrs: {
+  version = "2.12";
+  src = final.fetchurl {
+    url = finalAttrs.src.url;
+    
+```
+11.05
+
+
 
 OK, now an example is shown:
 
