oldAttrs to finalAttrs

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -329,7 +329,7 @@ let
             hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
           };
 
-          nativebuildinputs = oldattrs.nativebuildinputs or [] ++ [
+          nativebuildinputs = oldAttrs.nativebuildinputs or [] ++ [
             final.jq
           ];
         });
@@ -387,7 +387,7 @@ but if you want to you can use that.
 Soham Chowdhury: What is the advantage of this over the `rec`, isn't it equivalent in
 the end?
 
-Silvan: It looks like if you just have a derivation like this it does make a difference
+Silvan: It looks like if you just have a derivation like this, it does make a difference
 if you have a `.overrideAttrs` because, we can test this out here:
 
 ```
@@ -467,6 +467,8 @@ Yuriy Taraday: Yeah
 
 Silvan: It might also be `urls`, let's see whether this works:
 
+Yuriy Taraday: I think it's both.
+
 ```nix
 # ...
  .overrideAttrs (finalAttrs: {
@@ -475,8 +477,61 @@ Silvan: It might also be `urls`, let's see whether this works:
     url = finalAttrs.src.url;
     
 ```
-11.05
 
+Or we could also, let's just do this for now, overide version and then check the value in here:
+
+```nix
+let 
+  pkgs = import <nixpkgs> {
+    overlays = [
+      (final: prev: {
+        hello = (prev.hello.override {
+          #fetchurl = throw "not fetchurl";
+        }).overrideAttrs (finalAttrs: {
+          version = "2.12";
+          # src = final.fetchurl {
+          #url = finalAttrs.src.url;
+          #hash = "sha256-jzkukv2sv28wsm18tcqnxoczmlxdyh2idh9rlibh2ya=";
+          #};
+
+          nativebuildinputs = (oldAttrs.nativebuildinputs or []) ++ [
+            final.jq
+          ];
+        });
+      })
+    ];
+  };
+in pkgs.hello
+```
+
+Let's go into nix repl. Let's do like a:
+
+```nix
+nix-repl> hello = import ./test-v5.nix
+
+nix-repl> hello
+
+error:
+       … while calling the 'import' builtin
+         at «string»:1:2:
+            1|  import ./test-v5.nix
+             |  ^
+
+       error: undefined variable 'oldAttrs'
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/2/test-v5.nix:14:32:
+           13|
+           14|           nativebuildinputs = (oldAttrs.nativebuildinputs or []) ++ [
+             |                                ^
+           15|             final.jq
+```
+
+So this should be the hello derivation output. We messed up the variable name here so, `oldAttrs`
+`finalAttrs` now:
+
+11.36
+```nix
+
+```
 
 
 OK, now an example is shown:
