nix repl test issue

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -528,162 +528,91 @@ error:
 So this should be the hello derivation output. We messed up the variable name here so, `oldAttrs`
 `finalAttrs` now:
 
-11.36
 ```nix
+> nix repl
+nix-repl> hello = import ./test-v5.nix
 
+nix-repl> hello
+«derivation /nix/store/3m8s848r1wj6d2fq7if2ciwfd6jprfdn-hello-2.12.drv»
 ```
 
-
-OK, now an example is shown:
-
-```nix
-let
-  pkgs = import <nixpkgs> {
-    overlays = [
-      (final: prev: {
-        hello = (prev.hello.override {
-          }).overrideAttrs (finalAttrs: {
-            version = "2.12";
-
-            nativeBuildInputs = (finalAttrs.nativeBuildInputs or []) ++ [
-              final.jq
-            ];
-          }); 
-        })
-      ];
-    };
-  };
-in
-pkgs.hello
-```
-
-Then Silvan tests it with `nix-repl> hello = import ./test.nix`, and then inspects
-it with `hello.src.url` and such. Then changes:
+Now we can access the source from that derivation, just another derivation:
 
 ```nix
-nix-repl> hello_3 = hello.overideAttrs (finalAttrs: {version = "3"; })
+nix-repl> hello.src
+«derivation /nix/store/sihfj1b79w2xazpa826vqqwcdgbrkg1p-hello-2.12.tar.gz.drv»
 ```
-Oh, so he says this wouldn't work with `rec` way of doing. `rec` always keeps the old one.
 
-Yuri: Isn't fetchurl also, does it produce derivation, shouldn't it also have override uppers? (what?) something?
-Silvan: Let's see.
+Now we can look look at all the attributes in that source:
 
-Now it gets super complex and interesing, lot's of testing and ideas. Too complex for me atm, around 19.00 to 30.00 mark.
-Yuri is talking something about adding a new sha to overiddeAttrs?
-
-So Silvan continues with editing the:
+> Note: add dot, `.`, after `src`, in `hello.src.` press tab after `.`
 
 ```nix
-src = finalAttrs.src.overrideAttrs (finalAttrs': {
-  sha256 = "";
-});
+nix-repl> hello.src.
+hello.src.SSL_CERT_FILE                hello.src.doInstallCheck               hello.src.overrideAttrs
+hello.src.__ignoreNulls                hello.src.downloadToTemp               hello.src.passthru
+hello.src.__structuredAttrs            hello.src.drvAttrs                     hello.src.patches
+hello.src.all                          hello.src.drvPath                      hello.src.postFetch
+hello.src.args                         hello.src.executable                   hello.src.postHook
+hello.src.buildInputs                  hello.src.impureEnvVars                hello.src.preferHashedMirrors
+hello.src.builder                      hello.src.inputDerivation              hello.src.preferLocalBuild
+hello.src.cmakeFlags                   hello.src.mesonFlags                   hello.src.propagatedBuildInputs
+hello.src.configureFlags               hello.src.meta                         hello.src.propagatedNativeBuildInputs
+hello.src.curlOpts                     hello.src.mirrorsFile                  hello.src.showURLs
+hello.src.curlOptsList                 hello.src.name                         hello.src.stdenv
+hello.src.depsBuildBuild               hello.src.nativeBuildInputs            hello.src.strictDeps
+hello.src.depsBuildBuildPropagated     hello.src.nixpkgsVersion               hello.src.system
+hello.src.depsBuildTarget              hello.src.out                          hello.src.type
+hello.src.depsBuildTargetPropagated    hello.src.outPath                      hello.src.url
+hello.src.depsHostHost                 hello.src.outputHash                   hello.src.urls
+hello.src.depsHostHostPropagated       hello.src.outputHashAlgo               hello.src.userHook
+hello.src.depsTargetTarget             hello.src.outputHashMode
+hello.src.depsTargetTargetPropagated   hello.src.outputName
+hello.src.doCheck                      hello.src.outputs
+nix-repl> hello.src.
 ```
+
+And is there url? There is a url:
 
 ```nix
-
-let
-  pkgs = import <nixpkgs> {
-    overlays = [
-      (final: prev: {
-        hello = (prev.hello.override {
-          }).overrideAttrs (finalAttrs: {
-            version = "2.12";
-
-            src = finalAttrs.src.overrideAttrs (finalAttrs': {
-              sha256 = "";
-            });
-          }); 
-        })
-      ];
-    };
-in
-pkgs.hello
+nix-repl> hello.src.url
+"mirror://gnu/hello/hello-2.12.tar.gz"
 ```
 
-But this doesn't work with:
-
-```bash
-error: hash mismatch in fixed-output derivation '/nix/store/m4ixpqzfqkdskbq272gmd9jg23vyirfy-hello-2.12.tar.gz.drv':
-         specified: sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=
-            got:    sha256-zwSvhtwIUmjF9EcPuuSbGK+8Iht4CWqrhC2TSna60Ks=
-error: 1 dependencies of derivation '/nix/store/s511gxxwpk116sj0zxj7zhz88fxasp8y-hello-2.12.drv' failed to build
-```
-
-So they change the `sha256` to stream of 0's. To type many zeros (how many?) in helix type 0 in insert mode, exit
-insert mode with <Esc>, then type `64.` to repeat the last inserted character 64 times. `.` is the Helix command
-for "repeat last change".
-
-Also Silvan has useful aliases in the shell:
-```bash
-alias nb
-nb=nix-build
-
-alias ns
-ns=nix-shell
-
-alias ne
-ne=nix-instantiate --eval
-```
-Now, they try to test it in nix repl since this doesn't work. Open up the `nix repl` and import the
-`test1.nix` as `hello = import ./test1.nix`, then try `hello.src`, `hello.src.version`, `hello.src.sha256`.
-Then Silvan asks can we build the source derivation with: `:b hello.src`, and we get a tarball (all this inside 
-the nix repl), but then says "this sounds wrong... oh I know the problem". Silvan thinks the `src` part isn't valid
-because we are overriding attributes of the final derivation, we aren't overriding attributes of the
-function call for fetchurl. Now Silvan mentions an issue: `hello.src // { type = "";}` and says: I already 
-talked about this at the NixCon where, Yuri also knows this as well, where the nix repl doesn't show 
-the actual derivation attributes by default because derivations have a derivation type in here
-`hello.src // { type = "derivation"; }`, but if we override this to something like an empty string, or anything
-other than derivation we can see all the attributes:
-
+Okay that's cool. And so in this case we can see that the url was updated to 2.12. What was the old
+version? We can also do this:
 
 ```nix
-nix-repl> hello = import ./test1.nix
-
-nix-repl> hello.src // { type = ""; }
-{
-  SSL_CERT_FILE = "/no-cert-file.crt";
-  __ignoreNulls = true;
-  __structuredAttrs = false;
-  all = [ ... ];
-  args = [ ... ];
-  buildInputs = [ ... ];
-"/nix/store/p6k7xp1lsfmbdd731mlglrdj2d66mr82-bash-5.2p37/bin/bash";
-  cmakeFlags = [ ... ];
-  configureFlags = [ ... ];
-  curlOpts = "";
-  curlOptsList = "";
-  depsBuildBuild = [ ... ];
-  depsBuildBuildPropagated = [ ... ];
-  depsBuildTarget = [ ... ];
-  depsBuildTargetPropagated = [ ... ];
-  depsHostHost = [ ... ];
-  depsHostHostPropagated = [ ... ];
-  depsTargetTarget = [ ... ];
-  depsTargetTargetPropagated = [ ... ];
-  doCheck = false;
-  ...
+nix-repl> hello.overrideAttrs (finalAttrs: { version = "3"; })
+«derivation /nix/store/mg990h0475l2gjqchs5sb0ggm8gjki27-hello-3.drv»
 ```
-And these are the actual attributes that `.overrideAttrs` overrides. These are what gets passed to the
-derivation builder underneath so in here we can override the `sha256` but that's just an environment 
-variable. If we actually look at the implementation of fetchurl (he checks now the `default.nix` of 
-fetchurl) and points to:
+
+Just do this again. There's a new derivation, let's do hello three:
 
 ```nix
-...
-# New-style output content requirements
-inherit (hash_) outputHashAlgo outputHash;
+nix-repl> hello_3 = hello.overideAttrs (finalAttrs: { version = "3"; })
 ```
-So we shouldn't override the `sha256` but this `outputHash` property but that's a bit weird, and like
-an implementation detail almost so. (Now it gets subtle and complex, I'd need to write out everything)
 
-23.36 It get's complex and interesting, but eventually we get this solution:
+Now:
 
 ```nix
-# For now, this is probably the best general solution
-src = final.fetchurl {
-  url = finalAttrs.src.url;
-  sha256 = "";
-}
+nix-repl> hello_3.src.url
+"mirror://gnu/hello/hello-3.tar.gz"
 ```
-... I need to watch this at some later date, there is much to unpack here.
+
+That now has the url updated. This wouldn't work with `rec` way of doing nix things, it would
+always keep the old one. And this might not be super useful for url here because you still need to
+update the url in the end though I guess we could do this kind of pattern here if we want to reuse
+the old url. We do need to update the hash here though. Otherwise it's just gonna reuse the
+prefetched thing.
+
+Yuriy Taraday: Isn't fetchurl also, does it produce derivation, should it also have a right uppers? 
+(13:12) something.
+
+Silvan: Ah, yes, let's see. Let's do `test.nix` does that work:
+
+```nix
+nix repl test.nix
+
+```
 
