2nd fetchurl/default.nix

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -613,6 +613,86 @@ Silvan: Ah, yes, let's see. Let's do `test.nix` does that work:
 
 ```nix
 nix repl test.nix
-
+warning: future versions of Nix will require using `--file` to load a file
+#..
 ```
+
+> Note: currently one has to pass `--file` otherwise:
+
+```nix
+# with `--file`
+❯ nix repl --file test-v5.nix
+Nix 2.24.11
+Type :? for help.
+Loading installable ''...
+Added 47 variables.
+nix-repl>
+```
+
+```nix
+# without `--file`
+❯ nix repl test-v5.nix
+Nix 2.24.11ype :? for help.
+error: path '/home/stablejoy/code/nix-hour-transcripts/episodes/2/test-v5.nix' is not a flake (because it's not a directory)
+```
+
+Ah that's the, let's do this:
+
+```nix
+❯ nix repl
+Nix 2.24.11
+Type :? for help.
+nix-repl> hello = import ./test-v5.nix
+```
+
+Okay, we can look at source:
+
+```nix
+nix-repl> hello.src
+«derivation /nix/store/sihfj1b79w2xazpa826vqqwcdgbrkg1p-hello-2.12.tar.gz.drv»
+```
+
+That's the source derivation. Now does this have `overrideAttrs`? It does:
+
+```nix
+nix-repl> hello.src.overrideAttrs
+«lambda @ /nix/store/lifi3q1an6mgsksd52hizhhjfj1yf6sg-nixos/nixos/pkgs/stdenv/generic/make-derivation.nix:101:8»
+```
+
+Yuriy Taraday: So we could just add the new sha in `overrideAttrs` here, right?
+
+Silvan: Oh yeah, that might work, let's, I do think there is, I'm not sure if it's `overrideAttrs`, this is
+might not work:
+
+```nix
+nix-repl> lib.functionAttrs hello.src.overrideAttrs
+error: undefined variable 'lib'
+       at «string»:1:1:
+            1| lib.functionAttrs hello.src.overrideAttrs
+             | ^
+```
+
+Let's import `lib`:
+
+```nix
+nix-repl> lib = import <nixpkgs/lib>
+
+nix-repl> lib.functionAttrs hello.src.overrideAttrs
+error: attribute 'functionAttrs' missing
+       at «string»:1:1:
+            1| lib.functionAttrs hello.src.overrideAttrs
+             | ^
+```
+
+```nix
+nix-repl> lib.functionArgs hello.src.overrideAttrs  
+{ }
+```
+
+Ah, that doesn't work. See, I would have liked to see what kind of things we can override but I don't think that's supported.
+We can look at the implementation of `fetchurl` though to see things it does.
+
+Yuriy Taraday: We could try.
+
+14.22
 
