re-editing the 0th, add more code blocks and error messages, add default.nix

--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1,6 +1,10 @@
-All right, well let's start super basically, I'm gonna use vim and editing the `default.nix` file, that's the file
-nix evaluates by default, so let's open the file and some super basic nix stuff, let's just do like a null,
-simplest value:
+All right, well let's start super basically, I'm gonna use vim and editing the `default.nix` file:
+
+```
+vim default.nix
+```
+That's the file nix evaluates by default, so let's open the file and some super basic nix stuff, 
+let's just do like a null, simplest value:
 
 ```nix
 null
@@ -8,11 +12,23 @@ null
 
 And then I can evaluate this, using, so there's an old way to evaluate things and a new way to evaluate things, the
 old way to just evaluate the nix values is kind of convoluted, it's `nix-instantiate --eval`, ideally it should just
-be `nix-eval` but legacy, `nix-instantiate --eval` and that should be it (returns `null`). Yes, so it evaluated `null`.
-That's the `default.nix` file, we can also pass the file name explicitly: `nix-instantiate --eval default.nix` and 
-that also works. Generally you don't have to use `nix-instantiate --eval` because in here you have like a derivation
-or something, generally with nix you wanna build derivations instead of just evaluating nix itself, but yeah, let's
-start with evaluation for now. 
+be `nix-eval` but legacy, `nix-instantiate --eval` and that should be it.
+
+```nix
+> nix-instantiate --eval 
+null
+```
+
+Yes, so it evaluated `null`.
+That's the `default.nix` file, we can also pass the file name explicitly:
+
+```nix
+nix-instantiate --eval default.nix
+null
+```
+And that also works. Generally you don't have to use `nix-instantiate --eval` because in here you 
+have like a derivation or something, generally with nix you wanna build derivations instead of just 
+evaluating nix itself, but yeah, let's start with evaluation for now. 
 
 So you have simple values, one of the main data structures in nix is the attribute set, lets add names here:
 
@@ -23,10 +39,17 @@ So you have simple values, one of the main data structures in nix is the attribu
 }
 ```
 
-That's just a dictionary known from almost every language out there you can have keys and values `foo = values;`, 
-keys don't have to be quoted like json, there is an equal sign and a semicolon at the end. You can quote keys
+That's just a dictionary known from almost every language out there you can have keys and values:
+
+```nix
+# Attribute set
+{
+  foo = null;
+}
+```
+Keys don't have to be quoted like json, there is an equal sign and a semicolon at the end. You can quote keys
 as well, `"foo" = values;`, that isn't needed when you have special symbols in here for example like a dot,
-`"foo.bar"` so we can evaluate this
+`"foo.bar"` so we can evaluate this:
 
 ```nix
 # Attribute set
@@ -41,8 +64,21 @@ as well, `"foo" = values;`, that isn't needed when you have special symbols in h
 { foo = null; "foo.bar" = null; }
 ```
 
-This evaluates to this what you see, but if we were to use this literally like this: `foo.bar = null;` this would
-nested in another set, so this is, what is it, `# syntactic sugar for:` foo equals another attribute set:
+This evaluates to just what you see, but if we were to use this literally like this:
+
+```nix
+# Attribute set
+{
+    foo = null;
+    "foo.bar" = null;
+
+    foo.bar = null;
+}
+```
+
+
+this would nested in another set, so this is, what is it, `# syntactic sugar for:` foo equals 
+another attribute set:
 
 ```nix
 # Attribute set
@@ -74,7 +110,18 @@ So it just nests it automatically for you, let's quote this out for now so that 
 }
 ```
 
-(returns error). Oh I declared `foo` here already, so maybe that's good to see:
+```nix
+❯ nix-instantiate --eval default.nix
+error: attribute 'foo.bar' already defined at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:3:5
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:6:5:
+            5|
+            6|     foo.bar = null;
+             |     ^
+            7|     # syntactic sugar for:
+ ~/code/nix-hour-transcripts/episodes/0  main ?1
+```
+
+Oh I declared `foo` here already, so maybe that's good to see:
 
 ```nix
 :!nix-instantiate --eval default.nix
